--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-id-swiper": "^4.0.0",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
