--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
     "react-owl-carousel": "^2.3.3",
-    "react-owl-carousel2": "^0.3.0",
-    "react-router-dom": "^6.23.1",
-    "swiper": "^11.1.4"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
